--- a/Final-Project/Youtube-Clone/style.css
+++ b/Final-Project/Youtube-Clone/style.css
@@ -137,7 +137,7 @@ hr {
 }
 
 .video {
-	width: 270px;
+	width: 250px;
 	margin-bottom: 30px;
 }
 
@@ -158,4 +158,43 @@ hr {
 	height: 40px;
 	width: 40px;
 	margin-right: 10px;
+}
+
+
+.details {
+	display: flex;
+}
+
+.title {
+	display: flex;
+	flex-direction: column;
+}
+
+.title h3 {
+	color: rgb(3, 3, 3);
+	line-height: 18px;
+	font-size: 14px;
+	margin-bottom: 6px;
+}
+
+.title a, span {
+	text-decoration: none;
+	color: rgb(96, 96, 96);
+	font-size: 12px;
+}
+
+@media (max-width: 768px) {
+	.side-bar {
+		display: none;
+	}
+
+	.search {
+		display: none;
+	}
+}
+
+@media (max-width: 900px) {
+	.search.input {
+		width: 25rem;
+	}
 }
