--- a/Final-Project/Youtube-Clone/style.css
+++ b/Final-Project/Youtube-Clone/style.css
@@ -81,6 +81,12 @@ input:focus {
 	margin-top: 10px;
 }
 
+.display-this {
+	
+	height: 40px;
+	width: 40px;
+}
+
 .material-icons {
 	color: rgb(100, 100, 100);
 	padding: 0 7px;
